pagos, balance principal
