# src/main/resources/openapi/debitcard-contract.yml
@@ -55,6 +55,42 @@ paths:
                 $ref: '#/components/schemas/DebitCardDto'
         '404':
           $ref: '#/components/responses/NotFound'
+  /debitcard/payment:
+    post:
+      tags: [ Debitcard ]
+      summary: Realiza pago con la tarjeta
+      operationId: payment
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/transactionDto'
+      responses:
+        '200':
+          description: Pago realizado exitosamente
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/transactionDto'
+        '404':
+          $ref: '#/components/responses/NotFound'
+  /debitcard/balance-principal/{debitNumber}:
+    get:
+      tags: [DebitCard]
+      summary: Obtiene el saldo de la cuenta principal asociada a la tarjeta de debito
+      operationId: balancePrincipal
+      parameters:
+        - $ref: '#/components/parameters/debitNumber'
+      responses:
+        '200':
+          description: Saldo de la cuenta principal de la tarjeta de debito obtenido con exito
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/balanceResponse'
+
+
 components:
   schemas:
     DebitCardDto:
@@ -74,6 +110,37 @@ components:
           items:
             type: string
             example: "321321"
+    transactionDto:
+      type: object
+      properties:
+        amount:
+          type: number
+          example: 200.00
+        originProductId:
+          type: string
+          example: "0001-0004-0001-0001"
+        destinyProductId:
+          type: string
+          example: "0001-0004-0001-0001"
+        document:
+          type: string
+          example: "46491946"
+        description:
+          type: string
+          example: "Pago por compra de un celular"
+        tipo:
+          type: string
+          example: "PAYMENT"
+
+    balanceResponse:
+      type: object
+      properties:
+        balance:
+          type: number
+          example: 200.00
+        productoId:
+          type: string
+          example: "32132131212"
 
     ErrorResponse:
       type: object
